dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.5)
AC_INIT(fsmg.c)
AC_CONFIG_HEADER(conf.h:conf.in)
AC_REVISION($Revision 1.0 \n$)dnl

AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_YACC
AC_PROG_LEX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CONST
AC_TYPE_SIZE_T
AC_HEADER_STDC
AC_HAVE_HEADERS(string.h malloc.h io.h sys/io.h dirent.h sys/types.h sys/stat.h sys/dirent.h unistd.h)
AC_HEADER_TIME
AC_CHECK_FUNCS(strchr memcpy)
AC_TYPE_SIGNAL
dnl AM_EXEEXT
AM_EXEEXT

AC_OUTPUT(Makefile,
[test -z "$CONFIG_HEADERS" || echo timestamp > stamp-h])
